<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ll_main"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear" />

        <Button
            android:id="@+id/btn_black"
            android:background="#000000" 
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:text="@string/btn_black" />
        <Button
            android:id="@+id/btn_red"
            android:background="#FF0000"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:text="@string/btn_red" />
        <Button
            android:id="@+id/btn_green"
            android:background="#00FF00"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:text="@string/btn_green" />
        <Button
            android:id="@+id/btn_blue"
            android:background="#0000FF"
            android:layout_width="55dp"
            android:layout_height="20dp"
            android:text="@string/btn_blue" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

  <example.android.graphics.canvas.CanvasView
    android:id="@+id/cv_canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</LinearLayout>
